fix: corrected font so it uses one of google fonts and fixed navbar spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import url("https://use.typekit.net/ded1uti.css");
-
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -7,14 +7,14 @@
 
 .grotesk{
     font-family:
-    'space-grotesk-variable',
+    'Space Grotesk',
     sans-serif;
 }
 
 
 
 h1 {
-    font-family: "space-grotesk-variable", sans-serif;
+    font-family: 'Space Grotesk', sans-serif;
 
   }
   
@@ -82,5 +82,5 @@ h1 {
     background-image: url(/noise.png);
     background-repeat: repeat;
     background-size: 182px;
-    opacity: 0.015;
+    opacity: 0.025;
 }
